--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +8,34 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+}
+
+.item {
+  display: flex;
+  margin: 50px;
+  padding: 50px;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+  width: 0;
+  background-color: white;
+  border-radius: 100%;
+  transform: scale(0) rotateX(90deg);
+
+  opacity: 0;
+  transition: 1500ms;
+}
+
+.item.show {
+  background-color: #6e3838;
+  transform: scale(1) rotateX(0deg);
+  border-radius: 25px;
+  width: 100px;
+  opacity: 1;
 }
